Add IO class and fix getFirst() compatibility issue
Co-authored-by: ZoeMcFife <93198038+ZoeMcFife@users.noreply.github.com>