@@ -2,6 +2,7 @@ package main.character;
 
 import main.combat.ActionType;
 import main.global.GameManager;
+import main.global.IO;
 import main.inventory.Inventory;
 import main.item.Armour;
 import main.item.Item;
@@ -350,7 +351,7 @@ public class GameCharacter
     {
         List<String> result = new java.util.ArrayList<>();
 
-        int height = boxes.getFirst().size(); // all same height
+        int height = boxes.get(0).size(); // all same height
 
         for (int line = 0; line < height; line++)
         {
